fix button color on iphone

--- a/src/components/MarketingHero/MarketingHero.css
+++ b/src/components/MarketingHero/MarketingHero.css
@@ -32,6 +32,7 @@
     font-weight: 700;
     line-height: 1.5;
     background-color: #50e3c2;
+    color: #2f3237;
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: all 0.2s ease;
